apps/homelab/pihole/pihole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---

apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: pihole
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: pihole-1
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
ports:
  - name: http 
    appProtocol: http
    protocol: TCP
    port: 8081
endpoints:
  - addresses:
      - "192.168.4.144"
