apps/homelab/pihole/pihole-ingress-admin-redirect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Content-Type-Options "nosniff";
      add_header Strict-Transport-Security "max-age=15552000; includeSubDomains; preload";
      add_header Upgrade $http_upgrade;
      add_header Connection "upgrade";
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
    nginx.ingress.kubernetes.io/permanent-redirect: /
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
  name: pihole-redirect
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.local.abbottland.io
    http:
      paths:
      - path: /admin
        pathType: Exact
        backend:
          service:
            name: pihole
            port:
              number: 8081
        
  tls:
  - hosts:
    - pihole.local.abbottland.io
    secretName: pihole-tls
