apps/homelab/pihole/pihole-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
    nginx.ingress.kubernetes.io/rewrite-target: /admin/$1
  name: pihole
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.local.abbottland.io
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pihole
            port:
              number: 8081
  tls:
  - hosts:
    - pihole.local.abbottland.io
    secretName: pihole-tls
